# Duck-Detector-Refactoring

./: LICENSE
.github/workflows/: build-and-push-telegram.yml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/asm/arm/: syscall_fastpath.S
app/src/main/cpp/asm/arm64/: syscall_fastpath.S
app/src/main/cpp/asm/x86/: syscall_fastpath.S
app/src/main/cpp/asm/x86_64/: syscall_fastpath.S
app/src/main/cpp/kernelcheck/: native_bridge.cpp
app/src/main/cpp/nativeroot/: cgroup_bridge.cpp  native_bridge.cpp  snapshot_builder.cpp  snapshot_builder.h
app/src/main/cpp/nativeroot/common/: codec.cpp  io_utils.cpp  io_utils.h  types.h
app/src/main/cpp/nativeroot/probes/: cgroup_process_probe.cpp  cgroup_process_probe.h  ksu_supercall_probe.cpp  ksu_supercall_probe.h  self_process_ioc_probe.cpp  self_process_ioc_probe.h
app/src/main/cpp/tee/common/: syscall_facade.cpp  syscall_facade.h
app/src/main/cpp/tee/keystore/: environment_probe.cpp
app/src/main/cpp/tee/trickystore/: trickystore_probe.cpp
app/src/main/java/com/eltavine/duckdetector/core/packagevisibility/: InstalledPackageVisibility.kt
app/src/main/java/com/eltavine/duckdetector/core/packagevisibility/preferences/: PackageVisibilityReviewStore.kt
app/src/main/java/com/eltavine/duckdetector/core/startup/legal/: AgreementAcceptanceStore.kt  AgreementScreen.kt
app/src/main/java/com/eltavine/duckdetector/core/ui/components/: AlphaBuildWarningOverlay.kt
app/src/main/java/com/eltavine/duckdetector/core/ui/presentation/: BuildInfoFormatting.kt
app/src/main/java/com/eltavine/duckdetector/features/dangerousapps/data/probes/: OpenApkFdPackageProbe.kt
app/src/main/java/com/eltavine/duckdetector/features/dangerousapps/data/repository/: DangerousAppsRepository.kt  PackageVisibilityChecker.kt
app/src/main/java/com/eltavine/duckdetector/features/dangerousapps/domain/: DangerousAppsReport.kt
app/src/main/java/com/eltavine/duckdetector/features/dangerousapps/presentation/: DangerousAppsCardModelMapper.kt
app/src/main/java/com/eltavine/duckdetector/features/dashboard/ui/: DashboardScreen.kt
app/src/main/java/com/eltavine/duckdetector/features/kernelcheck/data/native/: KernelCheckNativeBridge.kt  KernelCheckNativeSnapshot.kt
app/src/main/java/com/eltavine/duckdetector/features/kernelcheck/data/repository/: KernelCheckRepository.kt
app/src/main/java/com/eltavine/duckdetector/features/kernelcheck/domain/: KernelCheckReport.kt
app/src/main/java/com/eltavine/duckdetector/features/kernelcheck/presentation/: KernelCheckCardModelMapper.kt
app/src/main/java/com/eltavine/duckdetector/features/licenses/data/: AboutLibrariesJsonOverrides.kt
app/src/main/java/com/eltavine/duckdetector/features/licenses/ui/: OpenSourceLicensesEntry.kt  OpenSourceLicensesScreen.kt
app/src/main/java/com/eltavine/duckdetector/features/nativeroot/data/native/: CgroupProcessLeakNativeBridge.kt  NativeRootNativeBridge.kt  NativeRootNativeSnapshot.kt
app/src/main/java/com/eltavine/duckdetector/features/nativeroot/data/probes/: CgroupProcessLeakProbe.kt  KernelSuManagerFingerprintProbe.kt  MountNamespaceDriftProbe.kt
app/src/main/java/com/eltavine/duckdetector/features/nativeroot/data/repository/: NativeRootRepository.kt
app/src/main/java/com/eltavine/duckdetector/features/nativeroot/domain/: NativeRootReport.kt
app/src/main/java/com/eltavine/duckdetector/features/nativeroot/presentation/: NativeRootCardModelMapper.kt  NativeRootViewModel.kt
app/src/main/java/com/eltavine/duckdetector/features/settings/ui/: SettingsScreen.kt
app/src/main/java/com/eltavine/duckdetector/features/settings/ui/components/: AboutCard.kt
app/src/main/java/com/eltavine/duckdetector/features/settings/ui/model/: SettingsUiState.kt
app/src/main/java/com/eltavine/duckdetector/ui/: DuckDetectorApp.kt
app/src/main/java/com/eltavine/duckdetector/ui/shell/: AppShellState.kt  FloatingAppTabSwitcher.kt  StartupPolicyScreen.kt
app/src/main/res/raw/: aboutlibraries.json
app/src/main/res/values/: strings.xml
app/src/test/java/com/eltavine/duckdetector/core/packagevisibility/: InstalledPackageVisibilityCheckerTest.kt
app/src/test/java/com/eltavine/duckdetector/features/dangerousapps/data/probes/: OpenApkFdPackageProbeTest.kt
app/src/test/java/com/eltavine/duckdetector/features/dangerousapps/presentation/: DangerousAppsCardModelMapperTest.kt
app/src/test/java/com/eltavine/duckdetector/features/licenses/data/: AboutLibrariesJsonOverridesTest.kt
app/src/test/java/com/eltavine/duckdetector/features/nativeroot/data/native/: CgroupProcessLeakNativeBridgeTest.kt  NativeRootNativeBridgeTest.kt
app/src/test/java/com/eltavine/duckdetector/features/nativeroot/data/probes/: CgroupProcessLeakProbeTest.kt  KernelSuManagerFingerprintProbeTest.kt  MountNamespaceDriftProbeTest.kt
app/src/test/java/com/eltavine/duckdetector/features/nativeroot/presentation/: NativeRootCardModelMapperTest.kt
app/src/test/java/com/eltavine/duckdetector/ui/shell/: AppShellStateTest.kt
build-logic/src/main/kotlin/com/eltavine/duckdetector/buildlogic/: DuckDetectorApkArtifactsConventionPlugin.kt
gradle/: libs.versions.toml
